# cpp-dummy

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.circleci/: config.yml
include/dummy/: dummy-vector.h  dummy.h
src/: dummy-floating-point.cpp  dummy-integral.cpp  dummy-string.cpp
test/: dummy-floating-point.test.cpp  dummy-integral.test.cpp  dummy-string.test.cpp  dummy-user-defined.cpp  dummy-user-defined.h  dummy-user-defined.test.cpp  dummy-vector.test.cpp  test-main.cpp
